# worker-harness

./: .gitignore  README.md  SPEC.md  docker-compose.tailscale.example.yml  headscale-policy.example.json  install-service.sh  justfile  migrate-to-symlinks.sh  pyproject.toml  start-wh.sh
orchestrator_container/: Dockerfile  entrypoint.sh
scripts/: make-dist.sh
specs/: BIND_INDEXED_DATA_COPY_PLAN.md  MULTI_AGENT_RELIABILITY.md  OVERLAY_IP_MIGRATION.md  SPEC.md  SSHD_TO_TAILSCALE_SSH_MIGRATION.md  TAILSCALE.md  TAILSCALE_VALIDATION.md  userspace_worker.md  worker-harness-http-api-spec.md
src/: worker_harness_cli.py
src/worker_harness/: __init__.py  cache.py  config.py  data.py  db.py  heartbeat.py  job.py  lanes.py  metrics.py  models.py  orchestrator.py  ratelimit.py  reaper.py  ssh.py  tunnel_registry.py
src/worker_harness/cli/: agent.py  app.py  jobs.py  tunnels.py  workers.py
src/worker_harness/tui/: __init__.py  (+1 more)
systemd/: worker-harness-restart.path  worker-harness-restart.service  worker-harness-restart.sh  worker-harness-update.path  worker-harness-update.service  worker-harness-update.sh  worker-harness.service
tests/: test_cache.py  test_data_api.py  test_file_transfer_api.py  test_jobs_delete_api.py  test_lanes.py  test_orchestrator_live_api.py  test_ratelimit.py  test_reliability_api.py  test_ssh_cleanup.py  test_sync_jobs.py  test_tunnel_registry.py  test_worker_data_discovery.py
worker_container/: CUDA_ENV_GUIDE.md  Dockerfile  Singularity.def  entrypoint.sh  requirements.txt  wh-cuda-env  wh-data-export  wh-data-import  worker_daemon.py
